added slick slider to about page.

--- a/about/index.html
+++ b/about/index.html
@@ -8,13 +8,16 @@
   <meta name="author" content=""/>
   <title>About Global App Initiative </title>
   <meta name="description" content="Global App Initiative - About us."/>
-  <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"/>
-
-  <link rel="stylesheet" href="/css/global.css"/>
-  <link rel="stylesheet" type="text/css" href="/css/about.css"/>
-  <link rel="stylesheet" type="text/css" href="/css/ihover.css"/>
+  <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
+  <link rel="stylesheet" href="../css/global.css"/>
+  <link rel="stylesheet" type="text/css" href="../css/about.css"/>
+  <link rel="stylesheet" type="text/css" href="../css/ihover.css"/>
+  <link rel="stylesheet" type="text/css" href="../slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="../slick/slick-theme.css"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <script src="../slick/slick.min.js"></script>
+  <script src="../js/about.js"></script>
 </head>
 <body>
   
@@ -29,15 +32,15 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="/"><img height="48px" src="/img/GAI-logo-white-extra-small.png" class="logotopleft"></a>
+        <a href="/"><img height="48px" src="../img/GAI-logo-white-extra-small.png" class="logotopleft"></a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="/about/">About</a></li>
-          <li><a href="/projects/">Projects</a></li>
-          <li><a href="/education/">Education</a></li>
-          <li><a href="/events/">Events</a></li>
-          <li><a href="/contact/">Contact</a></li>
+          <li><a href="../about/index.html">About</a></li>
+          <li><a href="../projects/index.html">Projects</a></li>
+          <li><a href="../education/index.html">Education</a></li>
+          <li><a href="../events/index.html">Events</a></li>
+          <li><a href="../contact/index.html">Contact</a></li>
         </ul>
       </div>
     </div>
@@ -74,22 +77,16 @@
         </div>
     </div>
     <div class="background">
-        <img src="/img/gai-video.jpg" class="stretch" alt="About GAI Video">
+        <img src="../img/gai-video.jpg" class="stretch" alt="About GAI Video">
     </div>
     <div class="container-fluid about_body">
         <h2>Our E-Board</h2>
-        <p class="about_body_text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce luctus purus
-            vitae arcu venenatis sagittis. Vivamus justo sem, sollicitudin eget neque eget,
-            imperdiet molestie tortor. Quisque tristique iaculis nisl, ut blandit augue hendrerit
-            vitae. Pellentesque interdum nisl nibh, et varius.
-        </p>
     </div>
     <div class="container">
         <div class="col-sm-4 col-xs-6">
             <div class="ih-item circle colored effect3 left_to_right">
                 <a href="#">
-                <div class="img"><img src="/img/e-board/veena.jpg" alt="Veena Dali"></div>
+                <div class="img"><img src="../img/e-board/veena.jpg" alt="Veena Dali"></div>
                 <div class="info">
                     <h3>Veena Dali</h3>
                     <p>President</p>
@@ -101,7 +98,7 @@
             <div class="col-sm-4 col-xs-6">
                 <div class="ih-item circle colored effect3 left_to_right">
                     <a href="#">
-                    <div class="img"><img src="/img/e-board/kyle.jpg" alt="Kyle Mann"></div>
+                    <div class="img"><img src="../img/e-board/kyle.jpg" alt="Kyle Mann"></div>
                     <div class="info">
                         <h3>Kyle Mann</h3>
                         <p>VP of Operations</p>
@@ -112,7 +109,7 @@
             <div class="col-sm-4 col-xs-6">
                 <div class="ih-item circle colored effect3 left_to_right">
                     <a href="#">
-                    <div class="img"><img src="/img/e-board/An.png" alt="An Nguyen"></div>
+                    <div class="img"><img src="../img/e-board/An.png" alt="An Nguyen"></div>
                     <div class="info">
                         <h3>An Nguyen</h3>
                         <p>VP of Client Relations</p>
@@ -123,9 +120,9 @@
             <div class="col-sm-4 col-xs-6">
                 <div class="ih-item circle colored effect3 left_to_right">
                     <a href="#">
-                        <div class="img"><img src="/img/e-board/olivia.jpg" alt="Olivia Deng"></div>
+                        <div class="img"><img src="../img/e-board/olivia.jpg" alt="Olivia Deng"></div>
                         <div class="info">
-                            <h3>Olivia DEng</h3>
+                            <h3>Olivia Deng</h3>
                             <p>Treasurer</p>
                         </div>
                     </a>
@@ -134,7 +131,7 @@
             <div class="col-sm-4 col-xs-6">
                 <div class="ih-item circle colored effect3 left_to_right">
                     <a href="#">
-                    <div class="img"><img src="/img/e-board/chris.jpg" alt="Chris Yip"></div>
+                    <div class="img"><img src="../img/e-board/chris.jpg" alt="Chris Yip"></div>
                     <div class="info">
                         <h3>Chris Yip</h3>
                         <p>Secretary</p>
@@ -145,7 +142,7 @@
             <div class="col-sm-4 col-xs-6">
                 <div class="ih-item circle colored effect3 left_to_right">
                     <a href="#">
-                        <div class="img"><img src="/img/e-board/robin.jpeg" alt="Robin Liu"></div>
+                        <div class="img"><img src="../img/e-board/robin.jpeg" alt="Robin Liu"></div>
                         <div class="info">
                             <h3>Robin Liu</h3>
                             <p>Director of Marketing</p>
@@ -156,7 +153,7 @@
             <div class="col-sm-4 col-xs-6">
                 <div class="ih-item circle colored effect3 left_to_right">
                     <a href="#">
-                        <div class="img"><img src="/img/e-board/chi.JPG" alt="Chi Zhang"></div>
+                        <div class="img"><img src="../img/e-board/chi.JPG" alt="Chi Zhang"></div>
                         <div class="info">
                             <h3>Chi Zhang</h3>
                             <p>Director of Business Development</p>
@@ -167,10 +164,10 @@
             <div class="col-sm-4 col-xs-6">
                 <div class="ih-item circle colored effect3 left_to_right">
                     <a href="#">
-                        <div class="img"><img src="/img/e-board/alexandra.png" alt="Alexandra Miller-Browne"></div>
+                        <div class="img"><img src="../img/e-board/alexandra.png" alt="Alexandra Miller-Browne"></div>
                         <div class="info">
-                            <h3>Alexandra Miller-Browne</h3>
-                            <p>Director of ...</p>
+                            <h3>Alex Miller-Browne</h3>
+                            <p>Director of Operations</p>
                         </div>
                     </a>
                 </div>
@@ -178,7 +175,7 @@
             <div class="col-sm-4 col-xs-6">
                 <div class="ih-item circle colored effect3 left_to_right">
                     <a href="#">
-                        <div class="img"><img src="/img/e-board/Leen.jpg" alt="Leen AlShenibr"></div>
+                        <div class="img"><img src="../img/e-board/Leen.jpg" alt="Leen AlShenibr"></div>
                         <div class="info">
                             <h3>Leen AlShenibr</h3>
                             <p>Director of Education</p>
@@ -189,13 +186,16 @@
         </div>
     </div>
     <div class="container-fluid about_body">
-        <h2>Our E-Board</h2>
-        <p class="about_body_text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce luctus purus
-            vitae arcu venenatis sagittis. Vivamus justo sem, sollicitudin eget neque eget,
-            imperdiet molestie tortor. Quisque tristique iaculis nisl, ut blandit augue hendrerit
-            vitae. Pellentesque interdum nisl nibh, et varius.
-        </p>
+        <h2>Our History</h2>
+    </div>
+    <div class="container histor-container col-md-8 col-md-offset-2">
+        <div class="center">
+            <div><img src="http://placehold.it/100x150"></div>
+            <div><img src="http://placehold.it/100x150"></div>
+            <div><img src="http://placehold.it/100x150"></div>
+            <div><img src="http://placehold.it/100x150"></div>
+            <div><img src="http://placehold.it/100x150"></div>
+        </div>
     </div>
   </div>
 
