--- a/about/index.html
+++ b/about/index.html
@@ -185,16 +185,37 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid about_body">
+    <div class="container-fluid about_body history-container">
         <h2>Our History</h2>
-    </div>
-    <div class="container histor-container col-md-8 col-md-offset-2">
-        <div class="center">
-            <div><img src="http://placehold.it/100x150"></div>
-            <div><img src="http://placehold.it/100x150"></div>
-            <div><img src="http://placehold.it/100x150"></div>
-            <div><img src="http://placehold.it/100x150"></div>
-            <div><img src="http://placehold.it/100x150"></div>
+        <div class="row history-row">
+            <div class="col-sm-6 col-sm-offset-3">
+                <div class="center">
+                    <div class="history-event">
+                        <h6 class="date">May 02, 2014</h6>
+                        <h4 class="title">Global Appathon</h4>
+                        <p class="description">
+                            Global App Initiative hosts its first Global Appathon where more than
+                            80 attendees created mobile apps.
+                        </p>
+                    </div>
+                    <div class="history-event">
+                        <h6 class="date">May 02, 2014</h6>
+                        <h4 class="title">Global Appathon</h4>
+                        <p class="description">
+                            Global App Initiative hosts its first Global Appathon where more than
+                            80 attendees created mobile apps.
+                        </p>
+                    </div>
+                    <div class="history-event">
+                        <h6 class="date">May 02, 2014</h6>
+                        <h4 class="title">Global Appathon</h4>
+                        <p class="description">
+                            Global App Initiative hosts its first Global Appathon where more than
+                            80 attendees created mobile apps.
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
   </div>
