--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="/about/">About</a></li>
-          <li><a href="/projects/">Projects</a></li>
-          <li><a href="/education/">Education</a></li>
-          <li><a href="/events/">Events</a></li>
-          <li><a href="/contact/">Contact</a></li>
+            <li><a href="/about/index.html">About</a></li>
+            <li><a href="/projects/index.html">Projects</a></li>
+            <li><a href="/education/index.html">Education</a></li>
+            <li><a href="/events/index.html">Events</a></li>
+            <li><a href="/contact/index.html">Contact</a></li>
         </ul>
       </div>
     </div>
