--- a/about/index.html
+++ b/about/index.html
@@ -2,22 +2,20 @@
 <link rel="icon" href="/img/favicon.png" type="image/x-icon" />
 <html class="no-js" lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content=""/>
-  <meta name="author" content=""/>
-  <title>About Global App Initiative </title>
-  <meta name="description" content="Global App Initiative - About us."/>
-  <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
-  <link rel="stylesheet" href="../css/global.css"/>
-  <link rel="stylesheet" type="text/css" href="../css/about.css"/>
-  <link rel="stylesheet" type="text/css" href="../css/ihover.css"/>
-  <link rel="stylesheet" type="text/css" href="../slick/slick.css"/>
-  <link rel="stylesheet" type="text/css" href="../slick/slick-theme.css"/>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  <script src="../slick/slick.min.js"></script>
-  <script src="../js/about.js"></script>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content=""/>
+    <meta name="author" content=""/>
+    <title>About Global App Initiative </title>
+    <meta name="description" content="Global App Initiative - About us."/>
+    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/global.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/about.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/ihover.css"/>
+    <link rel="stylesheet" type="text/css" href="../slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="../slick/slick-theme.css"/>
+    <link rel="stylesheet" type="text/css" href="../owl.carousel/owl-carousel/owl.carousel.css"/>
+    <link rel="stylesheet" type="text/css" href="../owl.carousel/owl-carousel/owl.theme.css"/>
 </head>
 <body>
   
@@ -206,14 +204,6 @@
                             80 attendees created mobile apps.
                         </p>
                     </div>
-                    <div class="history-event">
-                        <h6 class="date">May 02, 2014</h6>
-                        <h4 class="title">Global Appathon</h4>
-                        <p class="description">
-                            Global App Initiative hosts its first Global Appathon where more than
-                            80 attendees created mobile apps.
-                        </p>
-                    </div>
                 </div>
             </div>
         </div>
@@ -289,5 +279,10 @@
       </div>
     </div>
   </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <script src="../slick/slick.min.js"></script>
+  <script src="../owl.carousel/owl-carousel/owl.carousel.js"></script>
+  <script src="../js/about.js"></script>
 </body>
 </html>
