--- a/about/index.html
+++ b/about/index.html
@@ -10,12 +10,11 @@
     <meta name="description" content="Global App Initiative - About us."/>
     <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/global.css"/>
-    <link rel="stylesheet" type="text/css" href="../css/about.css"/>
+    <link rel="stylesheet" type="text/css" href="../font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="../css/ihover.css"/>
-    <link rel="stylesheet" type="text/css" href="../slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="../slick/slick-theme.css"/>
     <link rel="stylesheet" type="text/css" href="../owl.carousel/owl-carousel/owl.carousel.css"/>
     <link rel="stylesheet" type="text/css" href="../owl.carousel/owl-carousel/owl.theme.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/about.css"/>
 </head>
 <body>
   
@@ -186,22 +185,48 @@
     <div class="container-fluid about_body history-container">
         <h2>Our History</h2>
         <div class="row history-row">
-            <div class="col-sm-6 col-sm-offset-3">
-                <div class="center">
-                    <div class="history-event">
-                        <h6 class="date">May 02, 2014</h6>
-                        <h4 class="title">Global Appathon</h4>
-                        <p class="description">
-                            Global App Initiative hosts its first Global Appathon where more than
-                            80 attendees created mobile apps.
+            <div class="col-sm-8 col-sm-offset-2">
+                <div class="owl-carousel">
+                    <div class="item history-event">
+                        <p class="history-date">May 02, 2014</p>
+                        <h4 class="history-title">Global Appathon</h4>
+                        <p class="history-description">Global App Initiative hosts its first Global
+                            Appathon where more than 80 attendees created mobile apps.
                         </p>
                     </div>
-                    <div class="history-event">
-                        <h6 class="date">May 02, 2014</h6>
-                        <h4 class="title">Global Appathon</h4>
-                        <p class="description">
-                            Global App Initiative hosts its first Global Appathon where more than
-                            80 attendees created mobile apps.
+                    <div class="item history-event">
+                        <p class="history-date">May 02, 2014</p>
+                        <h4 class="history-title">Global Appathon</h4>
+                        <p class="history-description">Global App Initiative hosts its first Global
+                            Appathon where more than 80 attendees created mobile apps.
+                        </p>
+                    </div>
+                    <div class="item history-event">
+                        <p class="history-date">May 02, 2014</p>
+                        <h4 class="history-title">Global Appathon</h4>
+                        <p class="history-description">Global App Initiative hosts its first Global
+                            Appathon where more than 80 attendees created mobile apps.
+                        </p>
+                    </div>
+                    <div class="item history-event">
+                        <p class="history-date">May 02, 2014</p>
+                        <h4 class="history-title">Global Appathon</h4>
+                        <p class="history-description">Global App Initiative hosts its first Global
+                            Appathon where more than 80 attendees created mobile apps.
+                        </p>
+                    </div>
+                    <div class="item history-event">
+                        <p class="history-date">May 02, 2014</p>
+                        <h4 class="history-title">Global Appathon</h4>
+                        <p class="history-description">Global App Initiative hosts its first Global
+                            Appathon where more than 80 attendees created mobile apps.
+                        </p>
+                    </div>
+                    <div class="item history-event">
+                        <p class="history-date">May 02, 2014</p>
+                        <h4 class="history-title">Global Appathon</h4>
+                        <p class="history-description">Global App Initiative hosts its first Global
+                            Appathon where more than 80 attendees created mobile apps.
                         </p>
                     </div>
                 </div>
@@ -281,8 +306,7 @@
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  <script src="../slick/slick.min.js"></script>
-  <script src="../owl.carousel/owl-carousel/owl.carousel.js"></script>
+  <script src="../owl.carousel/owl-carousel/owl.carousel.min.js"></script>
   <script src="../js/about.js"></script>
 </body>
 </html>
