added stats number counter

--- a/about/index.html
+++ b/about/index.html
@@ -59,15 +59,15 @@
         <div class="col-sm-8 col-sm-offset-2" id="stats">
             <ul>
                 <li>
-                    <h1>300</h1>
+                    <span class="timer" data-from="0" data-to="300" data-speed="2000">300</span>
                     <p>Students</p>
                 </li>
                 <li>
-                    <h1>17</h1>
+                    <span class="timer" data-from="0" data-to="17" data-speed="2000">17</span>
                     <p>Nonprofits</p>
                 </li>
                 <li>
-                    <h1>4</h1>
+                    <span class="timer" data-from="0" data-to="4" data-speed="2000">4</span>
                     <p>Published Apps</p>
                 </li>
             </ul>
@@ -307,6 +307,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <script src="../owl.carousel/owl-carousel/owl.carousel.min.js"></script>
+  <script src="../js/jquery.countTo.js"></script>
   <script src="../js/about.js"></script>
 </body>
 </html>
