updated slider js

--- a/about/index.html
+++ b/about/index.html
@@ -188,45 +188,35 @@
             <div class="col-sm-8 col-sm-offset-2">
                 <div class="owl-carousel">
                     <div class="item history-event">
-                        <p class="history-date">May 02, 2014</p>
-                        <h4 class="history-title">Global Appathon</h4>
-                        <p class="history-description">Global App Initiative hosts its first Global
-                            Appathon where more than 80 attendees created mobile apps.
+                        <p class="history-date">August 2012</p>
+                        <h4 class="history-title">Clean App Your Neighborhood</h4>
+                        <p class="history-description">
+                            Kern Family Foundation sponsored a “Clean App Your Neighborhood” workshop
+                            where 5 teams of 6 students built an app for a different nonprofit over 5 days.
                         </p>
                     </div>
                     <div class="item history-event">
-                        <p class="history-date">May 02, 2014</p>
-                        <h4 class="history-title">Global Appathon</h4>
-                        <p class="history-description">Global App Initiative hosts its first Global
-                            Appathon where more than 80 attendees created mobile apps.
+                        <p class="history-date">November 2012</p>
+                        <h4 class="history-title">Apps For Humanity</h4>
+                        <p class="history-description">
+                            Global App Initiative (initially named Apps For Humanity) was established as a
+                            BU student organization with 40 active members and four non-profit teams.
                         </p>
                     </div>
                     <div class="item history-event">
-                        <p class="history-date">May 02, 2014</p>
+                        <p class="history-date">April 2014</p>
                         <h4 class="history-title">Global Appathon</h4>
-                        <p class="history-description">Global App Initiative hosts its first Global
-                            Appathon where more than 80 attendees created mobile apps.
+                        <p class="history-description">
+                            Global App Initiative hosts its first Global Appathon
+                            where more than 80 attendees created mobile apps.
                         </p>
                     </div>
                     <div class="item history-event">
-                        <p class="history-date">May 02, 2014</p>
-                        <h4 class="history-title">Global Appathon</h4>
-                        <p class="history-description">Global App Initiative hosts its first Global
-                            Appathon where more than 80 attendees created mobile apps.
-                        </p>
-                    </div>
-                    <div class="item history-event">
-                        <p class="history-date">May 02, 2014</p>
-                        <h4 class="history-title">Global Appathon</h4>
-                        <p class="history-description">Global App Initiative hosts its first Global
-                            Appathon where more than 80 attendees created mobile apps.
-                        </p>
-                    </div>
-                    <div class="item history-event">
-                        <p class="history-date">May 02, 2014</p>
-                        <h4 class="history-title">Global Appathon</h4>
-                        <p class="history-description">Global App Initiative hosts its first Global
-                            Appathon where more than 80 attendees created mobile apps.
+                        <p class="history-date">May 2014</p>
+                        <h4 class="history-title">ESA Awards</h4>
+                        <p class="history-description">
+                            Excellence in Student Activities awarded Global App Initiative with
+                            excellence in individual programming and best in service & justice.
                         </p>
                     </div>
                 </div>
@@ -271,7 +261,7 @@
         <li><a href="/newsletter/">Newsletter</a></li>
       </ul>
       <ul class="footer-lists">
-        <li>Get involved</li>
+        <li>Contact</li>
         <li><a href="/contact/students/">Students</a></li>
         <li><a href="/contact/non-profits/">Non-Profits</a></li>
         <li><a href="/partners/">Partners</a></li>
