--- a/contact/students/index.html
+++ b/contact/students/index.html
@@ -2,23 +2,24 @@
 <link rel="icon" href="/img/favicon.png" type="image/x-icon" />
 <html class="no-js" lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content=""/>
-  <meta name="author" content=""/>
-  <title>Be sure to Change this Title - Global App Initiative </title>
-  <meta name="description" content="Global App Initiative - Be sure to change this tag."/>
-  <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="/css/global.css"/>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content=""/>
+    <meta name="author" content=""/>
+    <title>Be sure to Change this Title - Global App Initiative </title>
+    <meta name="description" content="Global App Initiative - Be sure to change this tag."/>
+    <link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="../../css/global.css"/>
+    <link rel="stylesheet" href="../../css/contact.css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
 <body>
   
   <!-- ############################################################ -->
   <!-- Header -->
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container-fluid">
+    <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
           <span class="sr-only">Toggle navigation</span>
@@ -26,33 +27,37 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="/"><img height="48px" src="/img/GAI-logo-white-extra-small.png" class="logotopleft"></a>
+        <a href="/"><img height="48px" src="../../img/GAI-logo-white-extra-small.png" class="logotopleft"></a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="/about/">About</a></li>
-          <li><a href="/projects/">Projects</a></li>
-          <li><a href="/education/">Education</a></li>
-          <li><a href="/events/">Events</a></li>
-          <li><a href="/contact/">Contact</a></li>
+            <li><a href="../../about/index.html">About</a></li>
+            <li><a href="../../projects/index.html">Projects</a></li>
+            <li><a href="../../education/index.html">Education</a></li>
+            <li><a href="../../events/index.html">Events</a></li>
+            <li><a href="../../contact/index.html">Contact</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
   <!-- main body-->
-  <div class="body-container">
-    <div class="container">
-      <h2>This page is still under construction.</h2><br>
-      Sorry for the inconvenience! We recommend <a href="/">going back to the home page</a>.
+    <div class="container-fluid contact-container">
+        <!--contact nav bar-->
+        <div class="tab-filter-container">
+            <ul class="tab-filters">
+                <li class="filter active">
+                    <a class="filter-link active" href="../students/index.html">Student</a>
+                </li>
+                <li class="filter">
+                    <a class="filter-link" href="../non-profits/index.html">Nonprofit</a>
+                </li>
+            </ul>
+        </div>
     </div>
-    <div style="margin:0 auto">
-      <center><img src="/img/GAI_gif_blue_b.gif" style="opacity:0.2"></center>
-    </div>
-  </div>
 
   <!-- Site footer -->
-  <div class="footer">
+    <div class="footer">
     <div class="presub">
       <div class="subscribe-bar">
         <div>
@@ -67,7 +72,7 @@
       </div>
     </div>
     <div style="clear:both"></div>
-    <div class="container-fluid">
+    <div class="container">
       <ul class="footer-lists">
         <li>About</li>
         <li><a href="/team/">Team</a></li>
@@ -111,7 +116,7 @@
       <a href="https://github.com/GlobalAppInitiative"><img src="/img/social/github-32.png"></img></a>
     </ul>
     <hr>
-    <div class="container-fluid" style="padding-bottom:20px">
+    <div class="container" style="padding-bottom:20px">
        <div class="footer-corner">
         <a href="/">home</a>  -  <a href="/sitemap/"/>sitemap</a><br>Global App Initiative, Boston University
       </div>
@@ -119,6 +124,6 @@
         <a href="http://www.bu.edu/policies/students/disclaimer/"><i style="float:right">Website Disclaimer</i></a>
       </div>
     </div>
-  </div>
+    </div>
 </body>
 </html>
