updated contact page

--- a/contact/students/index.html
+++ b/contact/students/index.html
@@ -35,7 +35,7 @@
             <li><a href="../../projects/index.html">Projects</a></li>
             <li><a href="../../education/index.html">Education</a></li>
             <li><a href="../../events/index.html">Events</a></li>
-            <li><a href="../../contact/index.html">Contact</a></li>
+            <li><a href="../../contact/students/index.html">Contact</a></li>
         </ul>
       </div>
     </div>
@@ -45,32 +45,23 @@
     <div class="container-fluid contact-container">
         <!--contact nav bar-->
         <div class="tab-filter-container">
-            <ul class="tab-filters">
-                <li class="filter active">
-                    <a class="filter-link active" href="../students/index.html">Student</a>
-                </li>
-                <li class="filter">
-                    <a class="filter-link" href="../non-profits/index.html">Nonprofit</a>
-                </li>
-            </ul>
+      <ul class="tab-filters">
+          <li class="filter active">
+              <a class="filter-link active" href="../students/index.html">Student</a>
+          </li>
+          <li class="filter">
+              <a class="filter-link" href="../non-profits/index.html">Nonprofit</a>
+          </li>
+      </ul>
         </div>
-    </div>
+
+        <div class="contact-body student-contact">
+            <h1>Join Global App Initiative!</h1>
+        </div>
+  </div>
 
   <!-- Site footer -->
     <div class="footer">
-    <div class="presub">
-      <div class="subscribe-bar">
-        <div>
-          <form role="form">
-            <label for="email">Keep up to date</label>
-            <div class="form-group">
-              <input type="email" class="form-control" id="email" placeholder="Enter your email">
-            </div>
-            <button type="submit" class="btn btn-default">Subscribe</button>
-          </form>
-        </div>
-      </div>
-    </div>
     <div style="clear:both"></div>
     <div class="container">
       <ul class="footer-lists">
