--- a/contact/students/index.html
+++ b/contact/students/index.html
@@ -1,9 +1,9 @@
 <!doctype HTML>
-<link rel="icon" href="/img/favicon.png" type="image/x-icon" />
+<link rel="icon" href="/img/favicon.png" type="image/x-icon"/>
 <html class="no-js" lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content=""/>
     <meta name="author" content=""/>
     <title>Be sure to Change this Title - Global App Initiative </title>
@@ -15,106 +15,131 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
 <body>
-  
-  <!-- ############################################################ -->
-  <!-- Header -->
-  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+
+<!-- ############################################################ -->
+<!-- Header -->
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a href="/"><img height="48px" src="../../img/GAI-logo-white-extra-small.png" class="logotopleft"></a>
-      </div>
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-            <li><a href="../../about/index.html">About</a></li>
-            <li><a href="../../projects/index.html">Projects</a></li>
-            <li><a href="../../education/index.html">Education</a></li>
-            <li><a href="../../events/index.html">Events</a></li>
-            <li><a href="../../contact/students/index.html">Contact</a></li>
-        </ul>
-      </div>
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a href="../../index.html"><img height="48px" src="../../img/GAI-logo-white-extra-small.png" class="logotopleft"></a>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a href="../../about/index.html">About</a></li>
+                <li><a href="../../projects/index.html">Projects</a></li>
+                <li><a href="../../education/index.html">Education</a></li>
+                <li><a href="../../events/index.html">Events</a></li>
+                <li><a href="../../contact/students/index.html">Contact</a></li>
+            </ul>
+        </div>
     </div>
-  </nav>
+</nav>
 
-  <!-- main body-->
-    <div class="container-fluid contact-container">
-        <!--contact nav bar-->
-        <div class="tab-filter-container">
-      <ul class="tab-filters">
-          <li class="filter active">
-              <a class="filter-link active" href="../students/index.html">Student</a>
-          </li>
-          <li class="filter">
-              <a class="filter-link" href="../non-profits/index.html">Nonprofit</a>
-          </li>
-      </ul>
+<!-- main body-->
+<div class="container-fluid contact-container">
+    <!--contact nav bar-->
+    <div class="tab-filter-container">
+        <ul class="tab-filters">
+            <li class="filter active">
+                <a class="filter-link active" href="../students/index.html">Student</a>
+            </li>
+            <li class="filter">
+                <a class="filter-link" href="../non-profits/index.html">Nonprofit</a>
+            </li>
+        </ul>
+    </div>
+    <div class="container contact-body">
+        <h1>Join Global App Initiative!</h1>
+        <div class="row form-row">
+            <form>
+                <div class="col-sm-5 form-group">
+                    <label>Name</label>
+                    <input type="text" class="form-control">
+                    <label>Email</label>
+                    <input type="text" class="form-control">
+                    <label>Message</label>
+                    <textarea class="form-control" rows="5"></textarea>
+                    <button type="submit" class="btn btn-default form-btn">Submit</button>
+                </div>
+            </form>
+            <div class="col-sm-offset-2 col-sm-5">
+                <p id="student-paragraph">
+                    We'd love to have you! Regardless of background, experience, and knowledge,
+                    you are joining a community that is here to learn together.
+                </p>
+            </div>
         </div>
+    </div>
+    <hr>
+    <div class="container general-contact">
+        <h3>General Inquiry</h3>
+    </div>
+</div>
 
-        <div class="contact-body student-contact">
-            <h1>Join Global App Initiative!</h1>
-        </div>
-  </div>
-
-  <!-- Site footer -->
-    <div class="footer">
+<!-- Site footer -->
+<div class="footer">
     <div style="clear:both"></div>
     <div class="container">
-      <ul class="footer-lists">
-        <li>About</li>
-        <li><a href="/team/">Team</a></li>
-        <li><a href="https://medium.com/@GlobalAppsBU">Blog</a></li>
-        <li><a href="/press/">Press</a></li>
-      </ul>
-      <ul class="footer-lists">
-        <li>Projects</li>
-        <li><a href="/projects/current/">Current</a></li>
-        <li><a href="/projects/past/">Past</a></li>
-        <li><a href="/projects/clients/">Clients</a></li>
-      </ul>
-      <ul class="footer-lists">
-        <li>Resources</li>
-        <li><a href="/job-board/">Job Board</a></li>
-        <li><a href="/education/tutorials/">Tutorials</a></li>
-        <li><a href="/newsletter/">Newsletter</a></li>
-      </ul>
-      <ul class="footer-lists">
-        <li>Get involved</li>
-        <li><a href="/contact/students/">Students</a></li>
-        <li><a href="/contact/non-profits/">Non-Profits</a></li>
-        <li><a href="/partners/">Partners</a></li>
-      </ul>
-      <ul class="footer-lists gray-social-ul">
+        <ul class="footer-lists">
+            <li>About</li>
+            <li><a href="https://medium.com/@GlobalAppsBU">Blog</a></li>
+            <li><a href="/press/">Press</a></li>
+            <li><a href="#">Sponsors</a></li>
+        </ul>
+        <ul class="footer-lists">
+            <li>Projects</li>
+            <li><a href="/projects/current/">Current</a></li>
+            <li><a href="/projects/past/">Past</a></li>
+            <li><a href="/projects/clients/">Clients</a></li>
+        </ul>
+        <ul class="footer-lists">
+            <li>Resources</li>
+            <li><a href="/job-board/">Job Board</a></li>
+            <li><a href="/education/tutorials/">Tutorials</a></li>
+            <li><a href="/newsletter/">Newsletter</a></li>
+        </ul>
+        <ul class="footer-lists">
+            <li>Get involved</li>
+            <li><a href="/contact/students/">Students</a></li>
+            <li><a href="/contact/non-profits/">Non-Profits</a></li>
+            <li><a href="/partners/">Partners</a></li>
+        </ul>
+        <ul class="footer-lists gray-social-ul">
+            <a href="https://www.facebook.com/GlobalAppInitiative"><img src="/img/social/facebook-32.png"></img></a>
+            <a href="https://twitter.com/GlobalAppsBU"><img src="/img/social/twitter-32.png"></img></a>
+            <a href="https://instagram.com/globalappinitiative/"><img src="/img/social/instagram-32.jpg"></img></a>
+            <br>
+            <a href="https://www.linkedin.com/company/global-app-initiative"><img
+                    src="/img/social/linkedin-32.png"></img></a>
+            <a href="https://www.youtube.com/user/GlobalAppInitiative"><img src="/img/social/youtube-32.png"></img></a>
+            <a href="https://github.com/GlobalAppInitiative"><img src="/img/social/github-32.png"></img></a>
+        </ul>
+    </div>
+    <ul class="mobile-social">
         <a href="https://www.facebook.com/GlobalAppInitiative"><img src="/img/social/facebook-32.png"></img></a>
         <a href="https://twitter.com/GlobalAppsBU"><img src="/img/social/twitter-32.png"></img></a>
         <a href="https://instagram.com/globalappinitiative/"><img src="/img/social/instagram-32.jpg"></img></a>
-        <br>
-        <a href="https://www.linkedin.com/company/global-app-initiative"><img src="/img/social/linkedin-32.png"></img></a>
+        <a href="https://www.linkedin.com/company/global-app-initiative"><img
+                src="/img/social/linkedin-32.png"></img></a>
         <a href="https://www.youtube.com/user/GlobalAppInitiative"><img src="/img/social/youtube-32.png"></img></a>
         <a href="https://github.com/GlobalAppInitiative"><img src="/img/social/github-32.png"></img></a>
-      </ul>
-    </div>
-    <ul class="mobile-social">
-      <a href="https://www.facebook.com/GlobalAppInitiative"><img src="/img/social/facebook-32.png"></img></a>
-      <a href="https://twitter.com/GlobalAppsBU"><img src="/img/social/twitter-32.png"></img></a>
-      <a href="https://instagram.com/globalappinitiative/"><img src="/img/social/instagram-32.jpg"></img></a>
-      <a href="https://www.linkedin.com/company/global-app-initiative"><img src="/img/social/linkedin-32.png"></img></a>
-      <a href="https://www.youtube.com/user/GlobalAppInitiative"><img src="/img/social/youtube-32.png"></img></a>
-      <a href="https://github.com/GlobalAppInitiative"><img src="/img/social/github-32.png"></img></a>
     </ul>
     <hr>
     <div class="container" style="padding-bottom:20px">
-       <div class="footer-corner">
-        <a href="/">home</a>  -  <a href="/sitemap/"/>sitemap</a><br>Global App Initiative, Boston University
-      </div>
-      <div class="footer-corner">
-        <a href="http://www.bu.edu/policies/students/disclaimer/"><i style="float:right">Website Disclaimer</i></a>
-      </div>
+        <div class="footer-corner">
+            <a href="/">home</a> - <a href="/sitemap/"/>sitemap</a><br>Global App Initiative, Boston University
+        </div>
+        <div class="footer-corner">
+            <a href="http://www.bu.edu/policies/students/disclaimer/"><i style="float:right">Website Disclaimer</i></a>
+        </div>
     </div>
-    </div>
+</div>
 </body>
 </html>
