--- a/contact/non-profits/index.html
+++ b/contact/non-profits/index.html
@@ -57,32 +57,44 @@
         </ul>
     </div>
 
-    <div class="container contact-body">
-        <h1>Work With Us!</h1>
+    <div class="container-fluid contact-background">
+        <div class="container contact-body">
+            <h1>Work With Us!</h1>
 
-        <div class="row form-row">
-            <form>
-                <div class="col-sm-5 form-group">
-                    <label>Name</label>
-                    <input type="text" class="form-control">
-                    <label>Email</label>
-                    <input type="text" class="form-control">
-                    <label>Message</label>
-                    <textarea class="form-control" rows="5"></textarea>
-                    <button type="submit" class="btn btn-default form-btn">Submit</button>
+            <div class="row form-row">
+                <form>
+                    <div class="col-sm-5 form-group">
+                        <label class="contact-label">Name</label>
+                        <input type="text" class="form-control">
+                        <label class="contact-label">Email</label>
+                        <input type="text" class="form-control">
+                        <label class="contact-label">Message</label>
+                        <textarea class="form-control" rows="5"></textarea>
+                        <button type="submit" class="btn btn-default form-btn">Submit</button>
+                    </div>
+                </form>
+                <div class="col-sm-offset-1 col-sm-5">
+                    <p class="contact-paragraph" id="nonprofit-paragraph">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        In rhoncus est et mauris imperdiet, convallis efficitur purus malesuada. Duis mattis.
+                    </p>
                 </div>
-            </form>
-            <div class="col-sm-offset-2 col-sm-5">
-                <p id="nonprofit-paragraph">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    In rhoncus est et mauris imperdiet, convallis efficitur purus malesuada. Duis mattis.
-                </p>
             </div>
         </div>
     </div>
-    <hr>
     <div class="container general-contact">
         <h3>General Inquiry</h3>
+        <div class="col-sm-5">
+            <label>Name</label>
+            <input type="text" class="form-control">
+            <label>Email</label>
+            <input type="text" class="form-control">
+            <button type="submit" class="btn btn-default form-btn">Submit</button>
+        </div>
+        <div class="col-sm-offset-1 col-sm-5">
+            <label>Message</label>
+            <textarea class="form-control" rows="5"></textarea>
+        </div>
     </div>
 </div>
 
