--- a/contact/students/index.html
+++ b/contact/students/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content=""/>
     <meta name="author" content=""/>
-    <title>Be sure to Change this Title - Global App Initiative </title>
+    <title>Contact Us</title>
     <meta name="description" content="Global App Initiative - Be sure to change this tag."/>
     <link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css"/>
     <link rel="stylesheet" href="../../css/global.css"/>
@@ -55,31 +55,43 @@
             </li>
         </ul>
     </div>
-    <div class="container contact-body">
-        <h1>Join Global App Initiative!</h1>
-        <div class="row form-row">
-            <form>
-                <div class="col-sm-5 form-group">
-                    <label>Name</label>
-                    <input type="text" class="form-control">
-                    <label>Email</label>
-                    <input type="text" class="form-control">
-                    <label>Message</label>
-                    <textarea class="form-control" rows="5"></textarea>
-                    <button type="submit" class="btn btn-default form-btn">Submit</button>
+    <div class="container-fluid contact-background">
+        <div class="container contact-body">
+            <h1>Join Global App Initiative!</h1>
+            <div class="row form-row">
+                <form>
+                    <div class="col-sm-5 form-group">
+                        <label class="contact-label">Name</label>
+                        <input type="text" class="form-control contact-input">
+                        <label class="contact-label">Email</label>
+                        <input type="text" class="form-control contact-input">
+                        <label class="contact-label">Message</label>
+                        <textarea class="form-control contact-input" rows="5"></textarea>
+                        <button type="submit" class="btn btn-default form-btn">Submit</button>
+                    </div>
+                </form>
+                <div class="col-sm-offset-1 col-sm-5">
+                    <p class="contact-paragraph" id="student-paragraph">
+                        We'd love to have you! Regardless of background, experience, and knowledge,
+                        you are joining a community that is here to learn together.
+                    </p>
                 </div>
-            </form>
-            <div class="col-sm-offset-2 col-sm-5">
-                <p id="student-paragraph">
-                    We'd love to have you! Regardless of background, experience, and knowledge,
-                    you are joining a community that is here to learn together.
-                </p>
             </div>
         </div>
     </div>
-    <hr>
     <div class="container general-contact">
         <h3>General Inquiry</h3>
+        <div class="col-sm-5">
+            <label>Name</label>
+            <input type="text" class="form-control">
+            <label>Email</label>
+            <input type="text" class="form-control">
+            <button type="submit" class="btn btn-default form-btn">Submit</button>
+        </div>
+        <div class="col-sm-offset-1 col-sm-5">
+            <label>Message</label>
+            <textarea class="form-control" rows="5"></textarea>
+        </div>
     </div>
 </div>
 
