--- a/education/index.html
+++ b/education/index.html
@@ -6,10 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content=""/>
   <meta name="author" content=""/>
-  <title>Be sure to Change this Title - Global App Initiative </title>
+  <title>Education - Global App Initiative </title>
   <meta name="description" content="Global App Initiative - Be sure to change this tag."/>
   <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css"/>
   <link rel="stylesheet" href="../css/global.css"/>
+  <link rel="stylesheet" href="../css/education.css"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
@@ -43,11 +44,17 @@
   <!-- main body-->
   <div class="body-container">
     <div class="container">
-      <h2>Education Page.</h2><br>
-      Sorry for the inconvenience! We recommend <a href="/">going back to the home page</a>.
+      <h2>Video Tutorials</h2><br>
+        <nav>
+            <ul class="videoNav">
+                <li id="android">Android</li>
+                <li id="design">Design</li>
+                <li id="ios">iOS</li>
+                <li id="windows">Windows</li>
+            </ul>
+        </nav>
     </div>
     <div style="margin:0 auto">
-      <center><img src="/img/GAI_gif_blue_b.gif" style="opacity:0.2"></center>
     </div>
   </div>
 
@@ -93,22 +100,22 @@
         <li><a href="/partners/">Partners</a></li>
       </ul>
       <ul class="footer-lists gray-social-ul">
-        <a href="https://www.facebook.com/GlobalAppInitiative"><img src="/img/social/facebook-32.png"></img></a>
-        <a href="https://twitter.com/GlobalAppsBU"><img src="/img/social/twitter-32.png"></img></a>
-        <a href="https://instagram.com/globalappinitiative/"><img src="/img/social/instagram-32.jpg"></img></a>
+        <a href="https://www.facebook.com/GlobalAppInitiative"><img src="../img/social/facebook-32.png"></img></a>
+        <a href="https://twitter.com/GlobalAppsBU"><img src="../img/social/twitter-32.png"></img></a>
+        <a href="https://instagram.com/globalappinitiative/"><img src="../img/social/instagram-32.jpg"></img></a>
         <br>
-        <a href="https://www.linkedin.com/company/global-app-initiative"><img src="/img/social/linkedin-32.png"></img></a>
-        <a href="https://www.youtube.com/user/GlobalAppInitiative"><img src="/img/social/youtube-32.png"></img></a>
-        <a href="https://github.com/GlobalAppInitiative"><img src="/img/social/github-32.png"></img></a>
+        <a href="https://www.linkedin.com/company/global-app-initiative"><img src="../img/social/linkedin-32.png"></img></a>
+        <a href="https://www.youtube.com/user/GlobalAppInitiative"><img src="../img/social/youtube-32.png"></img></a>
+        <a href="https://github.com/GlobalAppInitiative"><img src="../img/social/github-32.png"></img></a>
       </ul>
     </div>
     <ul class="mobile-social">
-      <a href="https://www.facebook.com/GlobalAppInitiative"><img src="/img/social/facebook-32.png"></img></a>
-      <a href="https://twitter.com/GlobalAppsBU"><img src="/img/social/twitter-32.png"></img></a>
-      <a href="https://instagram.com/globalappinitiative/"><img src="/img/social/instagram-32.jpg"></img></a>
-      <a href="https://www.linkedin.com/company/global-app-initiative"><img src="/img/social/linkedin-32.png"></img></a>
-      <a href="https://www.youtube.com/user/GlobalAppInitiative"><img src="/img/social/youtube-32.png"></img></a>
-      <a href="https://github.com/GlobalAppInitiative"><img src="/img/social/github-32.png"></img></a>
+      <a href="https://www.facebook.com/GlobalAppInitiative"><img src="../img/social/facebook-32.png"></img></a>
+      <a href="https://twitter.com/GlobalAppsBU"><img src="../img/social/twitter-32.png"></img></a>
+      <a href="https://instagram.com/globalappinitiative/"><img src="../img/social/instagram-32.jpg"></img></a>
+      <a href="https://www.linkedin.com/company/global-app-initiative"><img src="../img/social/linkedin-32.png"></img></a>
+      <a href="https://www.youtube.com/user/GlobalAppInitiative"><img src="../img/social/youtube-32.png"></img></a>
+      <a href="https://github.com/GlobalAppInitiative"><img src="../img/social/github-32.png"></img></a>
     </ul>
     <hr>
     <div class="container-fluid" style="padding-bottom:20px">
