--- a/education/index.html
+++ b/education/index.html
@@ -47,7 +47,7 @@
       <h2>Video Tutorials</h2><br>
         <nav>
             <ul class="videoNav">
-                <li id="android">Android</li>
+                <li id="android"><a href="#nothing">Android</a></li>
                 <li id="design">Design</li>
                 <li id="ios">iOS</li>
                 <li id="windows">Windows</li>
