edited contact and home

--- a/contact/non-profits/index.html
+++ b/contact/non-profits/index.html
@@ -19,7 +19,7 @@
 <!-- ############################################################ -->
 <!-- Header -->
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container">
+    <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                     data-target="#bs-example-navbar-collapse-1">
@@ -65,11 +65,11 @@
                 <form>
                     <div class="col-sm-5 form-group">
                         <label class="contact-label">Name</label>
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control contact-input">
                         <label class="contact-label">Email</label>
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control contact-input">
                         <label class="contact-label">Message</label>
-                        <textarea class="form-control" rows="5"></textarea>
+                        <textarea class="form-control contact-input" rows="5"></textarea>
                         <button type="submit" class="btn btn-default form-btn">Submit</button>
                     </div>
                 </form>
