--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta name="description" content=""/>
   <meta name="author" content=""/>
   <title> Global App Initiative</title>
-  <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="/css/global.css" />
-  <link rel="stylesheet" href="/css/index.css"/>
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="css/global.css" />
+  <link rel="stylesheet" href="css/index.css"/>
   <!-- <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href='http://fonts.googleapis.com/css?family=Roboto:300,700,400' rel='stylesheet' type='text/css'>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -30,7 +30,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="/"><img height="48px" src="/img/GAI-logo-white-extra-small.png" class="logotopleft"></a>
+        <a href="/"><img height="48px" src="img/GAI-logo-white-extra-small.png" class="logotopleft"></a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
@@ -38,7 +38,7 @@
             <li><a href="/projects/index.html">Projects</a></li>
             <li><a href="/education/index.html">Education</a></li>
             <li><a href="/events/index.html">Events</a></li>
-            <li><a href="/contact/index.html">Contact</a></li>
+            <li><a href="/contact/students/index.html">Contact</a></li>
         </ul>
       </div>
     </div>
