new contact background. updated contact css

--- a/contact/non-profits/index.html
+++ b/contact/non-profits/index.html
@@ -63,7 +63,7 @@
 
             <div class="row form-row">
                 <form>
-                    <div class="col-sm-5 form-group">
+                    <div class="col-sm-6 col-sm-offset-3 form-group contact-form-group">
                         <label class="contact-label">Name</label>
                         <input type="text" class="form-control contact-input">
                         <label class="contact-label">Email</label>
@@ -73,12 +73,6 @@
                         <button type="submit" class="btn btn-default form-btn">Submit</button>
                     </div>
                 </form>
-                <div class="col-sm-offset-1 col-sm-5">
-                    <p class="contact-paragraph" id="nonprofit-paragraph">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        In rhoncus est et mauris imperdiet, convallis efficitur purus malesuada. Duis mattis.
-                    </p>
-                </div>
             </div>
         </div>
     </div>
