--- a/contact/students/index.html
+++ b/contact/students/index.html
@@ -60,7 +60,7 @@
             <h1>Join Global App Initiative!</h1>
             <div class="row form-row">
                 <form>
-                    <div class="col-sm-5 form-group">
+                    <div class="col-sm-6 col-sm-offset-3 form-group contact-form-group">
                         <label class="contact-label">Name</label>
                         <input type="text" class="form-control contact-input">
                         <label class="contact-label">Email</label>
@@ -70,12 +70,6 @@
                         <button type="submit" class="btn btn-default form-btn">Submit</button>
                     </div>
                 </form>
-                <div class="col-sm-offset-1 col-sm-5">
-                    <p class="contact-paragraph" id="student-paragraph">
-                        We'd love to have you! Regardless of background, experience, and knowledge,
-                        you are joining a community that is here to learn together.
-                    </p>
-                </div>
             </div>
         </div>
     </div>
