contact page done

--- a/about/index.html
+++ b/about/index.html
@@ -29,7 +29,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="/"><img height="48px" src="../img/GAI-logo-white-extra-small.png" class="logotopleft"></a>
+        <a href="../index.html"><img height="48px" src="../img/GAI-logo-white-extra-small.png" class="logotopleft"></a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
