updated home carousel

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
   <!-- <script src="/js/bootstrap.min.js"/> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script src="js/home.js"></script>
 </head>
 <body>
   
@@ -70,22 +69,62 @@
           <!-- Wrapper for slides -->
           <div class="carousel-inner" role="listbox">
               <div class="item active">
-                  <img src="img/home/community.png" alt="community members">
-                  <div class="carousel-caption">
-                      <h3>We are community</h3>
-                      <p>
-                          Our ambition is to use the skills we learn to help our community. We partner
-                          with nonprofit organization to bridge the gap between technology and
-                          community service. Our partners' causes cover an array of social and economic
-                          problems including education, health care, and homelessness.
-                      </p>
-                      <a href="projects/index.html">See the nonprofits we've helped</a>
+                  <div class="row">
+                      <img class="col-sm-4 col-sm-offset-2 carousel-img" src="img/home/community.png" alt="community members">
+                      <div class="col-sm-6 col-sm-offset-4 carousel-caption">
+                          <h3>We are community members</h3>
+                          <p>
+                              Our ambition is to use the skills we learn to help our community. We partner
+                              with nonprofit organization to bridge the gap between technology and
+                              community service. Our partners' causes cover an array of social and economic
+                              problems including education, health care, and homelessness.
+                          </p>
+                          <a href="projects/index.html">See the nonprofits we've helped</a>
+                      </div>
                   </div>
               </div>
               <div class="item">
-                  <img src="img/home/diverse.png" alt="diverse">
-                  <div class="carousel-caption">
-
+                  <div class="row">
+                      <img class="col-sm-4 col-sm-offset-2 carousel-img" src="img/home/diverse.png" alt="diverse">
+                      <div class="col-sm-6 col-sm-offset-4 carousel-caption">
+                          <h3>We are diverse</h3>
+                          <p>
+                              Students from several different schools in Boston University are a part of
+                              Global App Initiative's diverse community.Students' majors range from neuroscience
+                              to graphic design, and much more!
+                          </p>
+                          <a href="projects/index.html">Just take a look at our team</a>
+                      </div>
+                  </div>
+              </div>
+              <div class="item">
+                  <div class="row">
+                      <img class="col-sm-4 col-sm-offset-2 carousel-img" src="img/home/learners.png" alt="learners">
+                      <div class="col-sm-6 col-sm-offset-4 carousel-caption">
+                          <h3>We are community</h3>
+                          <p>
+                              Our ambition is to use the skills we learn to help our community. We partner
+                              with nonprofit organization to bridge the gap between technology and
+                              community service. Our partners' causes cover an array of social and economic
+                              problems including education, health care, and homelessness.
+                          </p>
+                          <a href="projects/index.html">See the nonprofits we've helped</a>
+                      </div>
+                  </div>
+              </div>
+              <div class="item">
+                  <div class="row">
+                      <img class="col-sm-4 col-sm-offset-2 carousel-img" src="img/home/leaders.png" alt="leaders">
+                      <div class="col-sm-6 col-sm-offset-4 carousel-caption">
+                          <h3>We are community</h3>
+                          <p>
+                              Our ambition is to use the skills we learn to help our community. We partner
+                              with nonprofit organization to bridge the gap between technology and
+                              community service. Our partners' causes cover an array of social and economic
+                              problems including education, health care, and homelessness.
+                          </p>
+                          <a href="projects/index.html">See the nonprofits we've helped</a>
+                      </div>
                   </div>
               </div>
           </div>
