added all carousel content

--- a/index.html
+++ b/index.html
@@ -101,14 +101,14 @@
                   <div class="row">
                       <img class="col-sm-4 col-sm-offset-2 carousel-img" src="img/home/learners.png" alt="learners">
                       <div class="col-sm-6 col-sm-offset-4 carousel-caption">
-                          <h3>We are community</h3>
+                          <h3>We are learners</h3>
                           <p>
-                              Our ambition is to use the skills we learn to help our community. We partner
-                              with nonprofit organization to bridge the gap between technology and
-                              community service. Our partners' causes cover an array of social and economic
-                              problems including education, health care, and homelessness.
+                              We encourage our members to continually grow in skill whether they are a veteran
+                              of app development or just now learning the ropes. Each week, students
+                              have the opporunity to constantly pick up new skills by attending office hours,
+                              workshops, and team meetings.
                           </p>
-                          <a href="projects/index.html">See the nonprofits we've helped</a>
+                          <a href="projects/index.html">View tutorials and educational resources</a>
                       </div>
                   </div>
               </div>
@@ -116,14 +116,14 @@
                   <div class="row">
                       <img class="col-sm-4 col-sm-offset-2 carousel-img" src="img/home/leaders.png" alt="leaders">
                       <div class="col-sm-6 col-sm-offset-4 carousel-caption">
-                          <h3>We are community</h3>
+                          <h3>We are leaders</h3>
                           <p>
-                              Our ambition is to use the skills we learn to help our community. We partner
-                              with nonprofit organization to bridge the gap between technology and
-                              community service. Our partners' causes cover an array of social and economic
-                              problems including education, health care, and homelessness.
+                              Not only do members learn how to code and design apps, they learn what it
+                              takes to be a leader in GAI's administrative board. Our Marketing, Operations,
+                              Business Development, Education, and Client Relations committees enable
+                              motivated students to guide their peers to succeed.
                           </p>
-                          <a href="projects/index.html">See the nonprofits we've helped</a>
+                          <a href="projects/index.html">See where you can fit in</a>
                       </div>
                   </div>
               </div>
