added d3 section. added bootstrap folder

--- a/contact/non-profits/index.html
+++ b/contact/non-profits/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content=""/>
     <title>Be sure to Change this Title - Global App Initiative </title>
     <meta name="description" content="Global App Initiative - Be sure to change this tag."/>
-    <link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="../../bootstrap/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="../../css/global.css"/>
     <link rel="stylesheet" href="../../css/contact.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
