--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content=""/>
   <meta name="author" content=""/>
   <title> Global App Initiative</title>
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
+  <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="css/global.css" />
   <link rel="stylesheet" href="css/index.css"/>
   <!-- <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -138,6 +138,18 @@
               <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
               <span class="sr-only">Next</span>
           </a>
+      </div>
+      <div class="container-fluid d3-container">
+          <div class="col-sm-6 col-sm-offset-3 d3-text">
+              <h3>Design. Develop. Debug.</h3>
+              <p>
+                  With our organization a student will learn how to analyze a client's needs, generate
+                  innovative ideas with a team, create a wireframe design, establish two-way communication
+                  with nonprofits, program a mobile app using object-oriented techniques, and become leaders.
+                  By working with us, our experience becomes your experience and leaves you with a very unique
+                  set of skills that is otherwise difficult to obtain in classes.
+              </p>
+          </div>
       </div>
   </div>
 
