--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content=""/>
     <title>About Global App Initiative </title>
     <meta name="description" content="Global App Initiative - About us."/>
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/global.css"/>
     <link rel="stylesheet" type="text/css" href="../font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="../css/ihover.css"/>
