added home footer

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </a>
     </div>
     <div class="container-fluid d3-container">
-        <div class="col-sm-6 col-sm-offset-3">
+        <div class="col-sm-4 col-sm-offset-4">
             <h3>Design. Develop. Debug.</h3>
             <p>
                 With our organization a student will learn how to analyze a client's needs, generate
@@ -163,17 +163,24 @@
     <div class="row home-footer">
         <div class="col-sm-4 home-contact">
             <p>Student or nonprofit?</p>
-            <a></a>
+            <div class="col-sm-4 col-sm-offset-4">
+                <a href="contact/students/index.html" class="btn home-btn">Contact Us</a>
+            </div>
         </div>
         <div class="col-sm-4 home-subscribe">
             <p>Keep up with the latest news and events</p>
-            <form>
-
-            </form>
+            <div class="colsm-8 col-sm-offset-2">
+                <form class="subscribe-form">
+                    <input class="form-control subscribe-input">
+                    <a href="#" class="btn home-btn">Subscribe</a>
+                </form>
+            </div>
         </div>
         <div class="col-sm-4 home-projects">
             <p>Want to see our work?</p>
-            <a></a>
+            <div class="col-sm-4 col-sm-offset-4">
+                <a href="#" class="btn home-btn">Projects</a>
+            </div>
         </div>
     </div>
 </div>
@@ -220,7 +227,9 @@
             <li><a href="/partners/">Partners</a></li>
         </ul>
         <ul class="footer-lists gray-social-ul">
-            <a href="https://www.facebook.com/GlobalAppInitiative" target="_blank"><img src="/img/social/facebook-32.png"></img></a>
+            <li>
+                <a href="https://www.facebook.com/GlobalAppInitiative" target="_blank"><img src="/img/social/facebook-32.png"></a>
+            </li>
             <a href="https://twitter.com/GlobalAppsBU" target="_blank"><img src="/img/social/twitter-32.png"></img></a>
             <a href="https://instagram.com/globalappinitiative/" target="_blank"><img src="/img/social/instagram-32.jpg"></img></a>
             <br>
@@ -230,7 +239,7 @@
         </ul>
     </div>
     <ul class="mobile-social">
-        <a href="https://www.facebook.com/GlobalAppInitiative" target="_blank"><img src="/img/social/facebook-32.png"></img></a>
+        <a href="https://www.facebook.com/GlobalAppInitiative" target="_blank"><img src="img/social/facebook-32.png"></img></a>
         <a href="https://twitter.com/GlobalAppsBU" target="_blank"><img src="/img/social/twitter-32.png"></img></a>
         <a href="https://instagram.com/globalappinitiative/" target="_blank"><img src="/img/social/instagram-32.jpg"></img></a>
         <a href="https://www.linkedin.com/company/global-app-initiative" target="_blank"><img src="/img/social/linkedin-32.png"></img></a>
