updated home footer

--- a/index.html
+++ b/index.html
@@ -169,10 +169,16 @@
         </div>
         <div class="col-sm-4 home-subscribe">
             <p>Keep up with the latest news and events</p>
-            <div class="colsm-8 col-sm-offset-2">
+            <div class="col-sm-8 col-sm-offset-2">
                 <form class="subscribe-form">
-                    <input class="form-control subscribe-input">
-                    <a href="#" class="btn home-btn">Subscribe</a>
+                    <div class="form-group">
+                        <div class="input-group">
+                            <input type="email" class="form-control" id="subscribe-input">
+                        <span class="input-group-btn">
+                            <button class="btn home-btn" id="subscribe-btn">Subscribe</button>
+                        </span>
+                        </div>
+                    </div>
                 </form>
             </div>
         </div>
